k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buckit
  labels: { app: buckit }
  annotations:
    consul.hashicorp.com/service-sync: "true"
    consul.hashicorp.com/service-port: "http"
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 9000
      targetPort: http
  selector: { app: buckit }
