k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: buckit
  name: admin-internal-classdojo
  annotations:
    haproxy-ingress.github.io/allowlist-source-range: "10.0.0.0/8"
    haproxy-ingress.github.io/config-backend: |
      http-response set-header Access-Control-Allow-Origin *
      http-response add-header X-Backend-Group s3-admin.internal.classdojo.com
spec:
  ingressClassName: haproxy-ingress-internal
  rules:
    - host: admin.internal.classdojo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: buckit, port: { name: http } } }
